Bug 12546 - vfs_streams_xattr doesn't cope with server changing directories
Summary: vfs_streams_xattr doesn't cope with server changing directories
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 12496
  Show dependency treegraph
 
Reported: 2017-01-31 18:37 UTC by Jeremy Allison
Modified: 2017-03-27 17:41 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for master. (1.52 KB, patch)
2017-02-01 19:38 UTC, Jeremy Allison
slow: review+
Details
git-am fix for 4.6.next, 4.5.next, 4.4.next. (1.84 KB, patch)
2017-02-02 01:06 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2017-01-31 18:37:37 UTC
When doing opens with backup intent, or as root, smbd can change directories within the exported share path. The code in vfs_fruit does not cope well with this.

Under investigation.

Jeremy.
Comment 1 Ralph Böhme 2017-01-31 20:25:52 UTC
Jeremy, will look into this as soon as possible, bt it might be Friday before I get to this. sorry!

So I can reproduce the issue by running make tests TESTS=vfs.fruit with the patches that change directory ?
Comment 2 Jeremy Allison 2017-01-31 20:36:29 UTC
Yes. I was planning to fix it also but I might not get to this before I have to get on a plane to FOSDEM on thursday Feb 2nd. I just needed this bug to keep track of the issue.
Comment 3 Jeremy Allison 2017-02-01 19:12:36 UTC
Turns out the problem is in vfs_streams_xattr which is used by vfs_fruit, not in vfs_fruit (or at least *this* specific problem isn't vfs_fruit related :-).

Patch to follow.
Comment 4 Jeremy Allison 2017-02-01 19:38:36 UTC
Created attachment 12897 [details]
git-am fix for master.
Comment 5 Jeremy Allison 2017-02-02 01:06:49 UTC
Created attachment 12898 [details]
git-am fix for 4.6.next, 4.5.next, 4.4.next.

Cherry-pick from master - commit message contains cherry-pick info. Applies cleanly to 4.6.next, 4.5.next, 4.4.next.
Comment 6 Ralph Böhme 2017-02-02 04:26:31 UTC
Reassigning to Karolin for inclusion in 4.4, 4.5 and 4.6.
Comment 7 Karolin Seeger 2017-02-02 11:46:21 UTC
(In reply to Ralph Böhme from comment #6)
Pushed to autobuild-v4-{6,5,4}-test.
Comment 8 Karolin Seeger 2017-02-13 15:47:15 UTC
(In reply to Karolin Seeger from comment #7)
Pushed to all branches.
Closing out bug report.

Thanks!